--- a/examples/lazymc/docker_compose.yml
+++ b/examples/lazymc/docker_compose.yml
@@ -60,7 +60,7 @@ services:
     environment:
       EULA: "TRUE"
     volumes:
-      - data:/data
+      - data:/home/container
 
 volumes:
   data:
