--- a/examples/ngrok/compose.yml
+++ b/examples/ngrok/compose.yml
@@ -10,7 +10,7 @@ services:
     restart: unless-stopped
     volumes:
       # attach the relative directory 'data' to the container's /data path
-      - ./data:/data
+      - ./data:/home/container
 
   ngrok:
     image: ngrok/ngrok:latest
