--- a/examples/simple-voice-chat/fabric-compose.yaml
+++ b/examples/simple-voice-chat/fabric-compose.yaml
@@ -18,4 +18,4 @@ services:
       MEMORY: 8G
     volumes:
       # attach the relative directory 'data' to the container's /data path
-      - ./data:/data
+      - ./data:/home/container
